fixing the nav on small query with banner

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -11,7 +11,7 @@ body {
     display:none;
     background-color: #F26F63;
     text-align: center;
-    padding: 2rem;
+    padding: .5rem;
 }
 
 header {
@@ -69,7 +69,7 @@ nav {
     left: 0;
     padding: 0;
     font-size: 1em;
-    top: 12%;
+    top: 15%;
 }
 
 .navigation li {
